kubernetes/apps/api/kubernetes.develop.yml
kind: Namespace
apiVersion: v1
metadata:
  name: harvester
  labels:
    name: harvester
---
apiVersion: v1
kind: Pod
metadata:
  namespace: harvester
  name: api-develop-pod
  labels:
    component: api
    env: develop
spec:
  imagePullSecrets:
    - name: regcred
  containers:
    - name: api-develop
      readinessProbe:
        httpGet:
          path: /api/status
          port: 3000
        initialDelaySeconds: 20
        periodSeconds: 3
      image: ghcr.io/robin-rpr/api-develop:latest
      ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: api-develop-deployment
  labels:
    app: api-develop
    env: develop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-develop
      env: develop
  template:
    metadata:
      labels:
        app: api-develop
        env: develop
    spec:
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      containers:
        - name: api-develop
          readinessProbe:
            httpGet:
              path: /api/status
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 3
          image: ghcr.io/robin-rpr/api-develop:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: harvester
  name: api-develop-node-port
spec:
  type: NodePort
  selector:
    app: api-develop
    env: develop
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: mongodb-develop-deployment
  labels:
    app: api-develop
    env: develop
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongodb-develop
      env: develop
  template:
    metadata:
      labels:
        app: mongodb-develop
        env: develop
    spec:
      restartPolicy: Always
      containers:
        - name: mongodb-develop
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongodata
---
apiVersion: v1
kind: Service
metadata:
  namespace: harvester
  name: mongodb-develop-srv
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb-develop
    env: develop
