kubernetes/apps/api/kubernetes.prod.yml
kind: Namespace
apiVersion: v1
metadata:
  name: harvester
  labels:
    name: harvester
---
apiVersion: v1
kind: Pod
metadata:
  namespace: harvester
  name: api-prod-pod
  labels:
    component: api
    env: prod
spec:
  containers:
    - name: api-prod
      readinessProbe:
        httpGet:
          path: /api/status
          port: 3000
        initialDelaySeconds: 20
        periodSeconds: 3
      image: docker.pkg.github.com/robin-rpr/harvester/api-prod:latest
      ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: api-prod-deployment
  labels:
    app: api-prod
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-prod
      env: prod
  template:
    metadata:
      labels:
        app: api-prod
        env: prod
    spec:
      restartPolicy: Always
      containers:
        - name: api-prod
          readinessProbe:
            httpGet:
              path: /api/status
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 3
          image: docker.pkg.github.com/robin-rpr/harvester/api-prod:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: harvester
  name: api-prod-node-port
spec:
  type: NodePort
  selector:
    app: api-prod
    env: prod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: mongodb-prod-deployment
  labels:
    app: api-prod
    env: prod
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongodb-prod
      env: prod
  template:
    metadata:
      labels:
        app: mongodb-prod
        env: prod
    spec:
      restartPolicy: Always
      containers:
        - name: mongodb-prod
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongodata
---
apiVersion: v1
kind: Service
metadata:
  namespace: harvester
  name: mongodb-prod-srv
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb-prod
    env: prod
