kubernetes/apps/api/kubernetes.yml
kind: Namespace
apiVersion: v1
metadata:
  name: harvester
  labels:
    name: harvester
---
apiVersion: v1
kind: Pod
metadata:
  namespace: harvester
  name: api-local-pod
  labels:
    component: api
    env: local
spec:
  containers:
    - name: api-local
#      readinessProbe:
#        httpGet:
#          path: /api/status
#          port: 3000
#        initialDelaySeconds: 20
#        periodSeconds: 3
      image: harvester/api:latest
      ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: api-local-deployment
  labels:
    app: api-local
    env: local
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-local
      env: local
  template:
    metadata:
      labels:
        app: api-local
        env: local
    spec:
      restartPolicy: Always
      containers:
        - name: api-local
          image: harvester/api:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: harvester
  name: api-local-node-port
spec:
  type: NodePort
  selector:
    app: api-local
    env: local
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: harvester
  name: mongodb-local-deployment
  labels:
    app: api-local
    env: local
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongodb-local
      env: local
  template:
    metadata:
      labels:
        app: mongodb-local
        env: local
    spec:
      restartPolicy: Always
      containers:
        - name: mongodb-local
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongodata
---
apiVersion: v1
kind: Service
metadata:
  namespace: harvester
  name: mongodb-local-srv
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb-local
    env: local
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-local-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: harvester
  labels:
      app: ingress
      env: local
spec:
  rules:
  - host: local.api.harvester.dev
    http:
      paths:
      - backend:
          serviceName: api-local-node-port
          servicePort: 80
